2008-01-11  Guido Diepen <guido@guidodiepen.nl>

	* Removed Race Condition when multiple clients would request a rapi
	  connection at the same time. A global variable is used which during
	  the function might be increased by other thread

2008-01-05  Guido Diepen <guido@guidodiepen.nl>

	* Added support for locked WM6 devices. Odccm initiates unlock procedure
	  upon connection of device.
	* Added the needed flags for handling the unlock procedure introduced
	  with WM6 ODCCM_DEVICE_PASSWORD_FLAG_PROVIDE_ON_DEVICE.
	  Client programs will get trigger if device is unlocked by user

2007-11-29  Mark Ellis <mark@mpellis.org.uk>

	* build legacy support by default

2007-11-25  Mark Ellis <mark@mpellis.org.uk>

	* when running in background, send messages to syslog
	
2007-11-11  Mark Ellis <mark@mpellis.org.uk>

	* improve backgrounding in odccm.c
	* device-legacy to emit disconnect signal when ping reply overdue
	* device-legacy fixes to connection requests, minor fixes
	* device-legacy use IP as dbus path and guid, not name

2007-07-31  Mark Ellis <mark@mpellis.org.uk>

	* added command options for ip configuration

2007-07-04  Mark Ellis <mark@mpellis.org.uk>

	* Added support for pre WM5 devices