@@ -1,3 +1,7 @@
+2008-03-22  Mark Ellis <mark@mpellis.org.uk>
+
+	* apply Guido's race condition fix to odccm-device-legacy.c
+
 2008-01-11  Guido Diepen <guido@guidodiepen.nl>
 
 	* Removed Race Condition when multiple clients would request a rapi
